# sides

./: import_map.json  package-lock.json  package.json  scripts.yaml  simple.idl  tsconfig.json  tslint.json
grammar/: package-lock.json  package.json  sides.pegjs  sides.ts
playground/: .gitignore  Cargo.toml  Makefile  main.py  oi.c  oi.ts  ola_setter.c  package-lock.json  package.json
playground/src/: lib.rs  python.rs
src/: assert.ts  context.spec.ts  context.ts  context_test.ts  identifier.ts  identifier_test.ts  index.ts  notation.ts  notation_test.ts  sides.ne  sides_grammar.d.ts  sides_grammar.js  testing.ts
src/language/: c.ts  c_test.ts
