[package]
name = "playground"
version = "0.1.0"
authors = ["André Puel <andrepuel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.11.1"                   # Bindings to Python interpreter